k8s/manifests-adff64/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-adff64
  namespace: journee
  labels:
    app: journee-adff64
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-adff64
  template:
    metadata:
      labels:
        app: journee-adff64
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-adff64
          image: gcr.io/my-docker-471807/journee:adff64-07167b
          ports:
            - containerPort: 3000
