k8s/manifests-adff64/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-adff64
  namespace: journee
spec:
  selector:
    app: journee-adff64
  ports:
    - port: 80
      targetPort: 3000
